--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "bulma": "^0.5.0",
-    "vue": "^2.4.1"
+    "es6-promise": "^4.1.1",
+    "object-to-json": "0.0.5",
+    "vue": "^2.4.1",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
